# Maple-FunASR-Desktop

./: .gitignore  README.md  build.ps1  build.spec  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
app/: main_window.py  settings.py  utils.py  worker.py
core/: downloader.py  exporter.py  hardware_checker.py  transcriber.py
ui/dialogs/: about_dialog.py  settings_dialog.py
ui/tabs/: hardware_tab.py  logs_tab.py  models_tab.py  transcribe_tab.py
